hack/envoy_config.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:
            - name: envoy.access_loggers.stdout
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          upgrade_configs:
            upgrade_type: "websocket"
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/podinfo/" }
                route: { cluster: podinfo, prefix_rewrite: "/" }
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                    disabled: true
              - match: { prefix: "/code/" }
                route: { cluster: code_server, prefix_rewrite: "/" }
              - match: { prefix: "/webtop/" }
                route: { cluster: webtop }
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              grpc_service:
                envoy_grpc:
                  cluster_name: auth_sidecar
                timeout: 0.5s
              transport_api_version: V3
              failure_mode_allow: false
              include_peer_certificate: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: auth_sidecar
    connect_timeout: 0.5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: auth_sidecar
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth-sidecar
                port_value: 9001
    dns_lookup_family: V4_ONLY
    respect_dns_ttl: true

  - name: auth_sidecar_http
    connect_timeout: 0.5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: auth_sidecar_http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth-sidecar
                port_value: 8080
    dns_lookup_family: V4_ONLY
    respect_dns_ttl: true

  - name: podinfo
    connect_timeout: 0.5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: podinfo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: podinfo
                port_value: 9898
    dns_lookup_family: V4_ONLY
    respect_dns_ttl: true

  - name: webtop
    connect_timeout: 0.5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: webtop
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webtop
                port_value: 3000
    dns_lookup_family: V4_ONLY
    respect_dns_ttl: true

  - name: code_server
    connect_timeout: 0.5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: code_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: code-server
                port_value: 8443
    dns_lookup_family: V4_ONLY
    respect_dns_ttl: true

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
